Alarm endpoints implemented

--- a/api/grpc-web/Makefile
+++ b/api/grpc-web/Makefile
@@ -19,6 +19,7 @@ gw:
 
 api:
 	mkdir -p api
+	$(PROTOC_PATH) $(PROTOC_ARGS) ../proto/api/alarm.proto
 	$(PROTOC_PATH) $(PROTOC_ARGS) ../proto/api/internal.proto
 	$(PROTOC_PATH) $(PROTOC_ARGS) ../proto/api/user.proto
 	$(PROTOC_PATH) $(PROTOC_ARGS) ../proto/api/tenant.proto
