--- a/api/php/Makefile
+++ b/api/php/Makefile
@@ -15,6 +15,7 @@ gw:
 	protoc ${PROTOC_ARGS} gw/gw.proto
 
 api:
+	protoc ${PROTOC_ARGS} api/alarm.proto
 	protoc ${PROTOC_ARGS} api/internal.proto
 	protoc ${PROTOC_ARGS} api/user.proto
 	protoc ${PROTOC_ARGS} api/tenant.proto
