--- a/api/Makefile
+++ b/api/Makefile
@@ -1,6 +1,6 @@
-.PHONY: rust grpc-web go js python md java kotlin csharp php c
+.PHONY: rust grpc-web go 
 
-all: rust grpc-web go js python md java kotlin csharp php c
+all: rust grpc-web go 
 
 rust:
 	cd rust && make
@@ -11,26 +11,3 @@ grpc-web:
 go:
 	cd go && make
 
-js:
-	cd js && make
-
-python:
-	docker compose run --rm chirpstack-api-python
-
-md:
-	docker compose run --rm chirpstack-api-md
-
-java:
-	docker compose run --rm chirpstack-api-java
-
-kotlin:
-	docker compose run --rm chirpstack-api-kotlin
-
-csharp:
-	docker compose run --rm chirpstack-csharp
-
-php:
-	docker compose run --rm chirpstack-api-php
-
-c:
-	docker compose run --rm chirpstack-api-c
