--- a/api/python/Makefile
+++ b/api/python/Makefile
@@ -29,6 +29,7 @@ gw:
 
 api:
 	$(PROTOC) ${PROTOC_ARGS} chirpstack-api/api/alarm.proto
+	$(PROTOC) ${PROTOC_ARGS} chirpstack-api/api/automation.proto
 	$(PROTOC) ${PROTOC_ARGS} chirpstack-api/api/internal.proto
 	$(PROTOC) ${PROTOC_ARGS} chirpstack-api/api/user.proto
 	$(PROTOC) ${PROTOC_ARGS} chirpstack-api/api/tenant.proto
